--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,13 @@ test:
   host: localhost
 
 production:
-  adapter: postgresql
-  database: vot_production
-  username: kevin
-  host: 10.176.68.176
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
+
+# production:
+#   adapter: postgresql
+#   database: vot_production
+#   username: kevin
+#   host: 10.176.68.176
