--- a/config/database.yml
+++ b/config/database.yml
@@ -17,14 +17,15 @@ test:
   password: password
   host: localhost
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
-
 # production:
-#   adapter: postgresql
-#   database: vot_production
-#   username: kevin
-#   host: 10.176.68.176
+#   adapter: sqlite3
+#   database: db/production.sqlite3
+#   pool: 5
+#   timeout: 5000
+
+production:
+  adapter: postgresql
+  database: vot_production
+  username: kevin
+  password: 
+  host: 10.176.68.176
