--- a/config/database.yml
+++ b/config/database.yml
@@ -27,5 +27,5 @@ production:
   adapter: postgresql
   database: vot_production
   username: kevin
-  password: 
+  password: u8i4jffkeo
   host: 10.176.68.176
