--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,22 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
-development:
-  adapter: postgresql
-  database: vot_development
-  username: postgres
-  password: password
-  host: localhost
+# development:
+#   adapter: postgresql
+#   database: vot_development
+#   username: postgres
+#   password: password
+#   host: localhost
 
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+  
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
 test:
   adapter: postgresql
   database: vot_test
@@ -17,15 +24,20 @@ test:
   password: password
   host: localhost
 
-# production:
-#   adapter: sqlite3
-#   database: db/production.sqlite3
-#   pool: 5
-#   timeout: 5000
-
 production:
-  adapter: postgresql
-  database: vot_production
-  username: kevin
-  password: u8i4jffkeo
-  host: 10.176.68.176
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
+
+# production:
+#   adapter: postgresql
+#   database: vot_production
+#   username: kevin
+#   password: u8i4jffkeo
+#   host: 10.176.68.176
+
+
+
+
+
