default database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,18 +15,18 @@ test:
   pool: 5
   timeout: 5000
 
-# production:
-#   adapter: sqlite3
-#   database: db/production.sqlite3
-#   pool: 5
-#   timeout: 5000
-
 production:
-  adapter: postgresql
-  database: vot_production
-  username: kevin
-  password: u8i4jffkeo
-  host: 10.176.68.176
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
+# 
+# production:
+#   adapter: postgresql
+#   database: vot_production
+#   username: kevin
+#   password: u8i4jffkeo
+#   host: 10.176.68.176
 
 
 
